--- a/src/JustaSwap_frontend/package.json
+++ b/src/JustaSwap_frontend/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
@@ -30,7 +31,7 @@
     "sass": "^1.63.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "vite": "^7.0.4",
     "vite-plugin-environment": "^1.1.3"
   }
 }
